[gd_scene load_steps=14 format=3 uid="uid://c7w2ra7cwexyg"]

[ext_resource type="Script" uid="uid://csyneg8cde8j3" path="res://Scripts/game_controller.gd" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://mf1in1q785lc" path="res://Scenes/cam_anchor.gd" id="2_6bp64"]
[ext_resource type="PackedScene" uid="uid://81l8rhk1tkwo" path="res://UI/Pause Menu/pause_menu.tscn" id="2_8gbba"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_21xkr"]
[ext_resource type="PackedScene" uid="uid://boqy5k0sgm4f0" path="res://UI/Start Menu/start_menu.tscn" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://b3plyc7crdh2u" path="res://Scenes/cameras.gd" id="2_ynf5e"]
[ext_resource type="Script" uid="uid://csjccrhj5wnx7" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="3_6bp64"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_344ge"]
[ext_resource type="Script" uid="uid://b8hhnqsugykly" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="5_344ge"]

[sub_resource type="Resource" id="Resource_ynf5e"]
script = ExtResource("4_344ge")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_hptm8"]
script = ExtResource("5_344ge")
keep_aspect = 1
cull_mask = 1048575
h_offset = 0.0
v_offset = 1.0
projection = 0
fov = 62.5
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.001
far = 4000.0
metadata/_custom_type_script = "uid://b8hhnqsugykly"

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_ynf5e"]

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_hptm8"]

[node name="GameController" type="Node" node_paths=PackedStringArray("world_3d", "gui", "player_parent")]
script = ExtResource("1_jjgbg")
world_3d = NodePath("World3D")
gui = NodePath("GUI")
player_parent = NodePath("Player")

[node name="Player" type="Node3D" parent="."]

[node name="World3D" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Cameras" type="Node3D" parent="World3D"]
script = ExtResource("2_ynf5e")

[node name="CamAnchor" type="Node3D" parent="World3D/Cameras"]
unique_name_in_owner = true
script = ExtResource("2_6bp64")

[node name="PhantomCamera3D" type="Node3D" parent="World3D/Cameras" node_paths=PackedStringArray("follow_target")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
top_level = true
script = ExtResource("3_6bp64")
follow_mode = 5
follow_target = NodePath("../CamAnchor")
tween_resource = SubResource("Resource_ynf5e")
camera_3d_resource = SubResource("Resource_hptm8")
attributes = SubResource("CameraAttributesPhysical_ynf5e")
follow_offset = Vector3(0, 0, 3)
follow_damping = true
dead_zone_width = 0.889
dead_zone_height = 1.0
metadata/_custom_type_script = "uid://csjccrhj5wnx7"

[node name="Camera3D" type="Camera3D" parent="World3D/Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)
attributes = SubResource("CameraAttributesPhysical_hptm8")
v_offset = 1.0

[node name="PhantomCameraHost" type="Node" parent="World3D/Cameras/Camera3D"]
unique_name_in_owner = true
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_21xkr")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="GUI" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="GUI" instance=ExtResource("2_bo1nx")]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="PauseMenu" parent="GUI" instance=ExtResource("2_8gbba")]
unique_name_in_owner = true
offset_left = 6.0
offset_top = 8.0
offset_right = 6.0
offset_bottom = 8.0
